--- a/CMS_APP/Views/Login/Login.cshtml
+++ b/CMS_APP/Views/Login/Login.cshtml
@@ -61,6 +61,8 @@
 
             <a tabindex="3" href="@ControllerName.Home/@ActionName.ForgotPasswordSubmit" class="font-weight-bold text-danger">Forgot Password ?</a>
 
+            <a tabindex="3" href="@Url.Action("CandidateRegistration","Candidate")" class="font-weight-bold text-danger">Apply For Job</a>
+
             <button type="submit" tabindex="4">Login</button>
         }
 
