--- a/CMS_APP/Views/Candidate/CandidateRegistration.cshtml
+++ b/CMS_APP/Views/Candidate/CandidateRegistration.cshtml
@@ -2,6 +2,17 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 <link href="~/css/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <style>
+
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+
+	/* Firefox */
+	input[type=number] {
+		-moz-appearance: textfield;
+	}
 	.form-section {
 	list-style: none;
 	}
@@ -305,8 +316,8 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="email">E-Mail</label>
-													<input type="email" class="form-control" id="email" data-type="input-textbox" aria-describedby="emailHelp" placeholder="ex: Myname@example.com" required="">
-													@*<small id="State" class="form-text text-muted">Enter alphabets only</small>*@
+													<input type="email" class="form-control" id="email" @*pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/."*@ data-type="input-textbox" aria-describedby="emailHelp" placeholder="ex: Myname@example.com" required="">
+													
 												</div>
 											</div>
 											<br>
@@ -323,13 +334,13 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="10th_pr">10th Grade Percentage</label>
-													<input type="number" class="form-control" id="10th_pr"  aria-describedby="10prHelp" placeholder="" min="0" max="100" step="0.01" required="" >
+													<input type="number" class="form-control" id="10th_pr"  aria-describedby="10prHelp" placeholder="" min="1" max="100" step="0.01" required="" >
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="12th_pr">12th Grade Percentage</label>
-													<input type="text" class="form-control" id="12th_pr"  aria-describedby="12prHelp" placeholder="" min="0" max="100" step="0.01" >
+													<input type="text" class="form-control" id="12th_pr"  aria-describedby="12prHelp" placeholder="" min="1" max="100" step="0.01" >
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -341,7 +352,7 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="12th_pr">Percentage Obtained in the Course</label>
-													<input type="number" class="form-control" id="degreepr" data-component="phone" aria-describedby="degreeprHelp" min="0" max="10" step="0.01" placeholder="" >
+													<input type="number" class="form-control" id="degreepr" data-component="phone" aria-describedby="degreeprHelp" min="1" max="10" step="0.01" placeholder="" >
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -469,7 +480,7 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<label for="Reference">Reference </label>
-													<input type="text" class="form-control" id="Reference" data-type="input-textbox" pattern="[A-Za-z]+" aria-describedby="first_nameHelp" placeholder="Name of Refrence" required="">
+													<input type="text" class="form-control" id="Reference" data-type="input-textbox" pattern="[A-Za-z]+" aria-describedby="first_nameHelp" placeholder="Name of Refrence" >
 													<small id="Reference1" class="form-text text-muted">Enter alphabets only</small>
 												</div>
 											</div>
@@ -575,15 +586,15 @@
 			$('#currentsalary').prop('required', false);
 			$('#expectedsalary').prop('required', false);
 			$('#Reason').prop('required', false);
-			return;
+			return null;
 		}
 	}
 	function locationrbtn(e) {
 		if (e.value == "yes") {
-			return;
+			return yes;
 		}
 		else {
-			return;
+			return no;
 		}
 	}
 	$('#fileup').change(function () {
@@ -661,7 +672,7 @@
 		var CurrentCTC = $('#currentsalary').val();
 		var ExpectedCTC = $('#expectedsalary').val();
 		var ReasoneForChange = $('#Reason').val();
-		var Refrence = $('#Reference').val();
+		var Reference = $('#Reference').val();
 		var resume = $('#resumeup').val();
 		
 		//var form = $('#form');
@@ -717,7 +728,7 @@
 							CurrentCTC: CurrentCTC,
 							ExpectedCTC: ExpectedCTC,
 							ReasoneForChange: ReasoneForChange,
-							Refrence: Refrence,
+							Reference: Reference,
 							resume: pdfString
 						},
 						success: function (response) {
