--- a/CMS_APP/Views/Shared/_Layout.cshtml
+++ b/CMS_APP/Views/Shared/_Layout.cshtml
@@ -252,7 +252,7 @@
                             <div class="pcoded-navigation-label" data-i18n="nav.category.navigation">All Details</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="active">
-                                    <a href="@Url.Action("Home","HomePage")" class="waves-effect waves-dark">
+                                    <a href="@Url.Action("HomePage","Home")" class="waves-effect waves-dark">
                                         <span class="pcoded-micon"><i class="ti-home"></i><b>D</b></span>
                                         <span class="pcoded-mtext" data-i18n="nav.dash.main">Dashboard</span>
                                         <span class="pcoded-mcaret"></span>
@@ -291,24 +291,25 @@
                                 </ul>
                                 </li>*@
                             </ul>
-                            @*<div class="pcoded-navigation-label" data-i18n="nav.category.forms">Candidate</div>
+                            <div class="pcoded-navigation-label" data-i18n="nav.category.forms">Candidate</div>
                             <ul class="pcoded-item pcoded-left-item">
                             <li>
-                            <a href="form-elements-component.html" class="waves-effect waves-dark">
+                            <a href="@Url.Action("AllCandidatelist","Candidate")" class="waves-effect waves-dark">
                             <span class="pcoded-micon"><i class="ti-user"></i><b>FC</b></span>
-                            <span class="pcoded-mtext" data-i18n="nav.form-components.main">Candidate Managment</span>
+                            <span class="pcoded-mtext" data-i18n="nav.form-components.main">Candidate Management</span>
                             <span class="pcoded-mcaret"></span>
                             </a>
                             </li>
-                            <li>
+                           @* <li>
                             <a href="bs-basic-table.html" class="waves-effect waves-dark">
                             <span class="pcoded-micon"><i class="ti-id-badge"></i><b>FC</b></span>
                             <span class="pcoded-mtext" data-i18n="nav.form-components.main">Test Results</span>
                             <span class="pcoded-mcaret"></span>
                             </a>
-                            </li>
+                            </li>*@
 
-                            </ul>*@
+                            </ul>
+                            <div class="pcoded-navigation-label" data-i18n="nav.category.forms">Interview</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="pcoded-hasmenu ">
                                     <a href="javascript:void(0)" class="waves-effect waves-dark">
