--- a/CMS_APP/Views/Home/HomePage.cshtml
+++ b/CMS_APP/Views/Home/HomePage.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    //ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="row">
