--- a/CMS_APP/Views/Shared/_Layout.cshtml
+++ b/CMS_APP/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CMS.Constants;
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -189,7 +190,7 @@
                             <li class="user-profile header-notification">
                                 <a href="#!" class="waves-effect waves-light">
                                     <img src="~/images/faq_man.png" class="img-radius" alt="User-Profile-Image">
-                                    <span>Niket Shah</span>
+                                    <span>@User.Identity.Name</span>
                                     <i class="ti-angle-down"></i>
                                 </a>
                                 <ul class="show-notification profile-notification">
@@ -355,95 +356,99 @@
                             </li>
                             </ul>*@
 
-                            <div class="pcoded-navigation-label" data-i18n="nav.category.other">Important Activity</div>
-                            @* <ul class="pcoded-item pcoded-left-item">
-                            <li class="pcoded-hasmenu ">
-                            <a href="javascript:void(0)" class="waves-effect waves-dark">
-                            <span class="pcoded-micon"><i class="ti-direction-alt"></i><b>M</b></span>
-                            <span class="pcoded-mtext" data-i18n="nav.menu-levels.main">Important modules</span>
-                            <span class="pcoded-mcaret"></span>
-                            </a>
-                            <ul class="pcoded-submenu">
-                            <li class="">
-                            <a href="javascript:void(0)" class="waves-effect waves-dark">
-                            <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                            <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Task Managment</span>
-                            <span class="pcoded-mcaret"></span>
-                            </a>
-                            </li>
-                            <li class="">
-                            <a href="javascript:void(0)" class="waves-effect waves-dark">
-                            <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                            <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Offer Latter</span>
-                            <span class="pcoded-mcaret"></span>
-                            </a>
-                            </li>
-                            <li class="">
-                            <a href="javascript:void(0)" class="waves-effect waves-dark">
-                            <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                            <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Techcronus Calendar</span>
-                            <span class="pcoded-mcaret"></span>
-                            </a>
-                            </li>
-                            <li class="">
-                            <a href="javascript:void(0)" class="waves-effect waves-dark">
-                            <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                            <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">To Do List</span>
-                            <span class="pcoded-mcaret"></span>
-                            </a>
-                            </li>
-                            </ul>
-                            </li>
-
-                            </ul>*@
-                            <ul class="pcoded-item pcoded-left-item">
+                            @if (User.IsInRole("Admin"))
+                            {
+                             <div class="pcoded-navigation-label" data-i18n="nav.category.other">Important Activity</div>
+                                @* <ul class="pcoded-item pcoded-left-item">
                                 <li class="pcoded-hasmenu ">
-                                    <a href="javascript:void(0)" class="waves-effect waves-dark">
-                                        <span class="pcoded-micon"><i class="ti-direction-alt"></i><b>M</b></span>
-                                        <span class="pcoded-mtext" data-i18n="nav.menu-levels.main">Master modules</span>
-                                        <span class="pcoded-mcaret"></span>
-                                    </a>
-                                    <ul class="pcoded-submenu">
-                                        <li class="">
-                                            <a href="@Url.Action("Designationlist","Designation")" class="waves-effect waves-dark">
-                                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Designation Master</span>
-                                                <span class="pcoded-mcaret"></span>
-                                            </a>
-                                        </li>
-                                        <li class="">
-                                            <a href="@Url.Action("Reasonlist","Reason")" class="waves-effect waves-dark">
-                                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Reason Master</span>
-                                                <span class="pcoded-mcaret"></span>
-                                            </a>
-                                        </li>
-                                        <li class="">
-                                            <a href="@Url.Action("Technologylist","Technology")" class="waves-effect waves-dark">
-                                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Technology Master</span>
-                                                <span class="pcoded-mcaret"></span>
-                                            </a>
-                                        </li>
-                                        <li class="">
-                                            <a href="@Url.Action("Roundlist","Round")" class="waves-effect waves-dark">
-                                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Round Master</span>
-                                                <span class="pcoded-mcaret"></span>
-                                            </a>
-                                        </li>
-
-                                        <li class="">
-                                            <a href="@Url.Action("Rolelist","Role")" class="waves-effect waves-dark">
-                                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Role Master</span>
-                                                <span class="pcoded-mcaret"></span>
-                                            </a>
-                                        </li>
-                                    </ul>
+                                <a href="javascript:void(0)" class="waves-effect waves-dark">
+                                <span class="pcoded-micon"><i class="ti-direction-alt"></i><b>M</b></span>
+                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.main">Important modules</span>
+                                <span class="pcoded-mcaret"></span>
+                                </a>
+                                <ul class="pcoded-submenu">
+                                <li class="">
+                                <a href="javascript:void(0)" class="waves-effect waves-dark">
+                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Task Managment</span>
+                                <span class="pcoded-mcaret"></span>
+                                </a>
+                                </li>
+                                <li class="">
+                                <a href="javascript:void(0)" class="waves-effect waves-dark">
+                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Offer Latter</span>
+                                <span class="pcoded-mcaret"></span>
+                                </a>
+                                </li>
+                                <li class="">
+                                <a href="javascript:void(0)" class="waves-effect waves-dark">
+                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Techcronus Calendar</span>
+                                <span class="pcoded-mcaret"></span>
+                                </a>
+                                </li>
+                                <li class="">
+                                <a href="javascript:void(0)" class="waves-effect waves-dark">
+                                <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">To Do List</span>
+                                <span class="pcoded-mcaret"></span>
+                                </a>
+                                </li>
+                                </ul>
                                 </li>
 
-                            </ul>
+                                </ul>*@
+                            
+                                <ul class="pcoded-item pcoded-left-item">
+                                    <li class="pcoded-hasmenu ">
+                                        <a href="javascript:void(0)" class="waves-effect waves-dark">
+                                            <span class="pcoded-micon"><i class="ti-direction-alt"></i><b>M</b></span>
+                                            <span class="pcoded-mtext" data-i18n="nav.menu-levels.main">Master modules</span>
+                                            <span class="pcoded-mcaret"></span>
+                                        </a>
+                                        <ul class="pcoded-submenu">
+                                            <li class="">
+                                                <a href="@Url.Action("Designationlist","Designation")" class="waves-effect waves-dark">
+                                                    <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                                    <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Designation Master</span>
+                                                    <span class="pcoded-mcaret"></span>
+                                                </a>
+                                            </li>
+                                            <li class="">
+                                                <a href="@Url.Action("Reasonlist","Reason")" class="waves-effect waves-dark">
+                                                    <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                                    <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Reason Master</span>
+                                                    <span class="pcoded-mcaret"></span>
+                                                </a>
+                                            </li>
+                                            <li class="">
+                                                <a href="@Url.Action("Technologylist","Technology")" class="waves-effect waves-dark">
+                                                    <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                                    <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Technology Master</span>
+                                                    <span class="pcoded-mcaret"></span>
+                                                </a>
+                                            </li>
+                                            <li class="">
+                                                <a href="@Url.Action("Roundlist","Round")" class="waves-effect waves-dark">
+                                                    <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                                    <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Round Master</span>
+                                                    <span class="pcoded-mcaret"></span>
+                                                </a>
+                                            </li>
+
+                                            <li class="">
+                                                <a href="@Url.Action("Rolelist","Role")" class="waves-effect waves-dark">
+                                                    <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                                    <span class="pcoded-mtext" data-i18n="nav.menu-levels.menu-level-21">Role Master</span>
+                                                    <span class="pcoded-mcaret"></span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </li>
+
+                                </ul>
+                            }
 
 
 
